// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConflictMarkerCellRenderer can render confidence group 1`] = `
[
  {
    "cellRendererFramework": [Function],
    "field": "dirtyDot",
    "headerName": "",
    "headerTooltip": "Modified",
    "pinned": "left",
    "width": 10,
  },
  {
    "cellRendererFramework": [Function],
    "field": "conflict",
    "headerName": "Conflict",
    "headerTooltip": "Conflict",
    "hide": false,
    "pinned": "left",
    "width": 100,
  },
  {
    "field": "time",
    "filterValueGetter": [Function],
    "headerName": "Time",
    "headerTooltip": "Time",
    "hide": false,
    "pinned": "left",
    "sort": "asc",
    "valueFormatter": [Function],
    "width": 200,
  },
  {
    "field": "latitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lat (°)",
    "headerTooltip": "Latitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "longitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lon (°)",
    "headerTooltip": "Longitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "depthKm",
    "filterValueGetter": [Function],
    "headerName": "Depth (km)",
    "headerTooltip": "Depth in kilometers",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "comparator": [Function],
    "field": "magnitudeMb",
    "filterValueGetter": [Function],
    "headerName": "mb",
    "headerTooltip": "Body wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMs",
    "filterValueGetter": [Function],
    "headerName": "ms",
    "headerTooltip": "Surface wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMl",
    "filterValueGetter": [Function],
    "headerName": "ml",
    "headerTooltip": "Local magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "field": "coverageSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-major",
    "headerTooltip": "Coverage semi-major axis in kilometers",
    "hide": true,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "coverageSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-minor",
    "headerTooltip": "Coverage semi-minor axis in kilometers",
    "hide": true,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-major",
    "headerTooltip": "Confidence semi-major axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-minor",
    "headerTooltip": "Confidence semi-minor axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "region",
    "headerName": "Region",
    "headerTooltip": "Region",
    "hide": false,
  },
  {
    "field": "activeAnalysts",
    "headerName": "Active analysts",
    "headerTooltip": "Active analysts",
    "hide": false,
    "tooltipValueGetter": [Function],
    "valueFormatter": [Function],
    "valueGetter": [Function],
    "width": 200,
  },
  {
    "field": "preferred",
    "headerName": "Preferred in stage",
    "headerTooltip": "Preferred in stage",
    "hide": false,
    "width": 115,
  },
  {
    "cellRendererFramework": [Function],
    "field": "status",
    "headerName": "Workflow status",
    "headerTooltip": "Workflow status",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
  {
    "field": "rejected",
    "headerName": "Rejected",
    "headerTooltip": "Rejected",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
]
`;

exports[`ConflictMarkerCellRenderer can render coverage group 1`] = `
[
  {
    "cellRendererFramework": [Function],
    "field": "dirtyDot",
    "headerName": "",
    "headerTooltip": "Modified",
    "pinned": "left",
    "width": 10,
  },
  {
    "cellRendererFramework": [Function],
    "field": "conflict",
    "headerName": "Conflict",
    "headerTooltip": "Conflict",
    "hide": false,
    "pinned": "left",
    "width": 100,
  },
  {
    "field": "time",
    "filterValueGetter": [Function],
    "headerName": "Time",
    "headerTooltip": "Time",
    "hide": false,
    "pinned": "left",
    "sort": "asc",
    "valueFormatter": [Function],
    "width": 200,
  },
  {
    "field": "latitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lat (°)",
    "headerTooltip": "Latitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "longitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lon (°)",
    "headerTooltip": "Longitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "depthKm",
    "filterValueGetter": [Function],
    "headerName": "Depth (km)",
    "headerTooltip": "Depth in kilometers",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "comparator": [Function],
    "field": "magnitudeMb",
    "filterValueGetter": [Function],
    "headerName": "mb",
    "headerTooltip": "Body wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMs",
    "filterValueGetter": [Function],
    "headerName": "ms",
    "headerTooltip": "Surface wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMl",
    "filterValueGetter": [Function],
    "headerName": "ml",
    "headerTooltip": "Local magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "field": "coverageSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-major",
    "headerTooltip": "Coverage semi-major axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "coverageSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-minor",
    "headerTooltip": "Coverage semi-minor axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-major",
    "headerTooltip": "Confidence semi-major axis in kilometers",
    "hide": true,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-minor",
    "headerTooltip": "Confidence semi-minor axis in kilometers",
    "hide": true,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "region",
    "headerName": "Region",
    "headerTooltip": "Region",
    "hide": false,
  },
  {
    "field": "activeAnalysts",
    "headerName": "Active analysts",
    "headerTooltip": "Active analysts",
    "hide": false,
    "tooltipValueGetter": [Function],
    "valueFormatter": [Function],
    "valueGetter": [Function],
    "width": 200,
  },
  {
    "field": "preferred",
    "headerName": "Preferred in stage",
    "headerTooltip": "Preferred in stage",
    "hide": false,
    "width": 115,
  },
  {
    "cellRendererFramework": [Function],
    "field": "status",
    "headerName": "Workflow status",
    "headerTooltip": "Workflow status",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
  {
    "field": "rejected",
    "headerName": "Rejected",
    "headerTooltip": "Rejected",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
]
`;

exports[`ConflictMarkerCellRenderer can render with no groups 1`] = `
[
  {
    "cellRendererFramework": [Function],
    "field": "dirtyDot",
    "headerName": "",
    "headerTooltip": "Modified",
    "pinned": "left",
    "width": 10,
  },
  {
    "cellRendererFramework": [Function],
    "field": "conflict",
    "headerName": "Conflict",
    "headerTooltip": "Conflict",
    "hide": false,
    "pinned": "left",
    "width": 100,
  },
  {
    "field": "time",
    "filterValueGetter": [Function],
    "headerName": "Time",
    "headerTooltip": "Time",
    "hide": false,
    "pinned": "left",
    "sort": "asc",
    "valueFormatter": [Function],
    "width": 200,
  },
  {
    "field": "latitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lat (°)",
    "headerTooltip": "Latitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "longitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lon (°)",
    "headerTooltip": "Longitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "depthKm",
    "filterValueGetter": [Function],
    "headerName": "Depth (km)",
    "headerTooltip": "Depth in kilometers",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "comparator": [Function],
    "field": "magnitudeMb",
    "filterValueGetter": [Function],
    "headerName": "mb",
    "headerTooltip": "Body wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMs",
    "filterValueGetter": [Function],
    "headerName": "ms",
    "headerTooltip": "Surface wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMl",
    "filterValueGetter": [Function],
    "headerName": "ml",
    "headerTooltip": "Local magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "field": "coverageSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-major",
    "headerTooltip": "Coverage semi-major axis in kilometers",
    "hide": true,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "coverageSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-minor",
    "headerTooltip": "Coverage semi-minor axis in kilometers",
    "hide": true,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-major",
    "headerTooltip": "Confidence semi-major axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-minor",
    "headerTooltip": "Confidence semi-minor axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "region",
    "headerName": "Region",
    "headerTooltip": "Region",
    "hide": false,
  },
  {
    "field": "activeAnalysts",
    "headerName": "Active analysts",
    "headerTooltip": "Active analysts",
    "hide": false,
    "tooltipValueGetter": [Function],
    "valueFormatter": [Function],
    "valueGetter": [Function],
    "width": 200,
  },
  {
    "field": "preferred",
    "headerName": "Preferred in stage",
    "headerTooltip": "Preferred in stage",
    "hide": false,
    "width": 115,
  },
  {
    "cellRendererFramework": [Function],
    "field": "status",
    "headerName": "Workflow status",
    "headerTooltip": "Workflow status",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
  {
    "field": "rejected",
    "headerName": "Rejected",
    "headerTooltip": "Rejected",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
]
`;

exports[`ConflictMarkerCellRenderer has column definitions 1`] = `
[
  {
    "cellRendererFramework": [Function],
    "field": "dirtyDot",
    "headerName": "",
    "headerTooltip": "Modified",
    "pinned": "left",
    "width": 10,
  },
  {
    "cellRendererFramework": [Function],
    "field": "conflict",
    "headerName": "Conflict",
    "headerTooltip": "Conflict",
    "hide": false,
    "pinned": "left",
    "width": 100,
  },
  {
    "field": "time",
    "filterValueGetter": [Function],
    "headerName": "Time",
    "headerTooltip": "Time",
    "hide": false,
    "pinned": "left",
    "sort": "asc",
    "valueFormatter": [Function],
    "width": 200,
  },
  {
    "field": "latitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lat (°)",
    "headerTooltip": "Latitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "longitudeDegrees",
    "filterValueGetter": [Function],
    "headerName": "Lon (°)",
    "headerTooltip": "Longitude in degrees",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "field": "depthKm",
    "filterValueGetter": [Function],
    "headerName": "Depth (km)",
    "headerTooltip": "Depth in kilometers",
    "hide": false,
    "valueFormatter": [Function],
  },
  {
    "comparator": [Function],
    "field": "magnitudeMb",
    "filterValueGetter": [Function],
    "headerName": "mb",
    "headerTooltip": "Body wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMs",
    "filterValueGetter": [Function],
    "headerName": "ms",
    "headerTooltip": "Surface wave magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "comparator": [Function],
    "field": "magnitudeMl",
    "filterValueGetter": [Function],
    "headerName": "ml",
    "headerTooltip": "Local magnitude",
    "hide": false,
    "valueFormatter": [Function],
    "width": 60,
  },
  {
    "field": "coverageSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-major",
    "headerTooltip": "Coverage semi-major axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "coverageSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Coverage semi-minor",
    "headerTooltip": "Coverage semi-minor axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMajorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-major",
    "headerTooltip": "Confidence semi-major axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "confidenceSemiMinorAxis",
    "filterValueGetter": [Function],
    "headerName": "Confidence semi-minor",
    "headerTooltip": "Confidence semi-minor axis in kilometers",
    "hide": false,
    "valueFormatter": [Function],
    "width": 130,
  },
  {
    "field": "region",
    "headerName": "Region",
    "headerTooltip": "Region",
    "hide": false,
  },
  {
    "field": "activeAnalysts",
    "headerName": "Active analysts",
    "headerTooltip": "Active analysts",
    "hide": false,
    "tooltipValueGetter": [Function],
    "valueFormatter": [Function],
    "valueGetter": [Function],
    "width": 200,
  },
  {
    "field": "preferred",
    "headerName": "Preferred in stage",
    "headerTooltip": "Preferred in stage",
    "hide": false,
    "width": 115,
  },
  {
    "cellRendererFramework": [Function],
    "field": "status",
    "headerName": "Workflow status",
    "headerTooltip": "Workflow status",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
  {
    "field": "rejected",
    "headerName": "Rejected",
    "headerTooltip": "Rejected",
    "hide": false,
    "pinned": "right",
    "width": 110,
  },
]
`;
